[build-system]
requires = ["maturin==1.4.0"]
build-backend = "maturin"

[project]
authors = [
    { name = "William Patton", email = "wllmpttn24@gmail.com" },
    { name = "Jan Funke", email = "funkej@janelia.hhmi.org" },
]
name = "funlib.segment"
version = "0.5.1"
description = "Tools for (re)labelling of arrays and graphs."
readme = "README.rst"

requires-python = ">=3.6"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

dependencies = ["numpy>=1.18.0"]

[project.optional-dependencies]
dev = [
    "bumpversion",
    "wheel",
    "ruff",
    "black",
    "Sphinx",
    "twine",
    "pytest",
    "pytest-runner",
    "matplotlib>=3.1.0",
]
